lib/stratiform/res/test/stratiform/corpus/pos/schema-with-select.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name select-example

select Status
  variant active Flag
  variant inactive Flag
  variant unknown Flag

document
  field name String
  select Status
