lib/stratiform/res/test/stratiform/corpus/neg/e306-schema-unknown-keyword.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name example
unknown-top-level-thing
document
  field name string
